--- a/Toko_buku_application.cbp
+++ b/Toko_buku_application.cbp
@@ -34,8 +34,10 @@
 		</Compiler>
 		<Unit filename="buku.cpp" />
 		<Unit filename="buku.h" />
+		<Unit filename="info.cpp" />
 		<Unit filename="info.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="pembeli.cpp" />
 		<Unit filename="pembeli.h" />
 		<Extensions>
 			<code_completion />
